--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>ValScrim.Tools - Random Map Picker & Team Generator</title>
+  <title>ValScrim.Tools</title>
   <meta name="description"
     content="Professional VALORANT scrim toolkit with random map picker, team generator, and side selection. Perfect for custom games, scrims, and tournaments." />
   <meta name="keywords"
