--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>ValScrim.Tools</title>
+  <title>valscrims.tool</title>
   <meta name="description"
     content="Professional VALORANT scrim toolkit with random map picker, team generator, and side selection. Perfect for custom games, scrims, and tournaments." />
   <meta name="keywords"
     content="VALORANT, scrim, map picker, team generator, random, custom games, 5v5, tournament, valscrim.tools" />
-  <meta name="author" content="ValScrim.Tools" />
+  <meta name="author" content="valscrims.tool" />
 
   <!-- Open Graph / Social Media -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="ValScrim.Tools - Random Map Picker & Team Generator" />
+  <meta property="og:title" content="valscrims.tool - Random Map Picker & Team Generator" />
   <meta property="og:description"
     content="Professional toolkit for VALORANT scrims. Random map picker, team generator, and side selection in one place." />
   <meta property="og:image" content="/placeholder.svg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ValScrim.Tools" />
+  <meta name="twitter:title" content="valscrims.tool" />
   <meta name="twitter:description"
-    content="Professional toolkit for VALORANT scrims. Random map picker, team generator, and side selection." />
+    content="Toolkit for VALORANT scrims. Random map picker, team generator, and side selection." />
   <meta name="twitter:site" content="@Lovable" />
 </head>
 
